# People-High-Risk-Area

./: .gitignore  Dockerfile  README.md  api.py  areas.json  docker-compose-manual.yml  docker-compose.yml  main.py  mongo-init.js  pyproject.toml  utility.py
api/: .env  api.Dockerfile  api.py  pyproject.toml  utility.py
data-schema/: areas.json  counts.json  peoples.json
inference/: .dockerignore  inference.Dockerfile  inference.py  main.py  pyproject.toml  utility.py
