[project]
name = "people-high-risk-area"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "markupsafe<3.0.2",
    "minio>=7.2.16",
    "pillow>=11.0.0",
    "pydantic>=2.11.9",
    "pymongo>=4.15.1",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
    "setuptools>=70.2.0",
    "supervision>=0.26.1",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "ultralytics>=8.3.203",
    "vidgear[asyncio]>=0.3.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.workspace]
members = [
    "api",
]
